test/fails/func_dupe_var.imp
fun  main(tmp)
vars tmp;
{       
        return  tmp;
}

fun  afunc(n, n)
{       
        return  n;
}

fun  bfunc()
vars n, n;
{       
        return  n;
}
